--- a/app/views/notification_emailer/new_comment.html.erb
+++ b/app/views/notification_emailer/new_comment.html.erb
@@ -1,7 +1,5 @@
 <h1>New comment</h1>
 
-<p>
-  <%= @comment.user.username %>
-</p>
+<p><%= @comment.user.username %></p>
 
 <%= simple_format @comment.content %>
